NOT COMMITTED YET (OR EXPERIMENTAL):
====================================

Emacs-mode:

 * test for the file associated to the buffer already exists.
 * small slices can be automatically enlarged to fit some number of pages
 * does not shrink log during initialization and save it at the end
 * changed names of configuration files whizzy.el 
 * fix a bug in parsing -dvicopy file-configuration. 
 * added whizzy-auto-recompile function to set corresponding variable.

Shell-script: 

 * diplay VERSION number with option -version and command info.
 * allow spaces in directory names (not in the filename itself).
 * changed names of configuration files whizzy.sh 
 * added a flag during initialization, so as to keep debugging information
 * added AUTOCOMPILE and AUTORECOMPILE variables.
 * removed obsolete DOMARKS.

LaTeX macros:

 * fixed display of cursor in vmode.
 * small slice can be automatically enlarged to fit some number of pages.
 * changed names of configuration files whizzy.sty

Installation/Documentation:

 * configuration, customization
 * added a redhat noarch.rpm (spec file provided by Jakuv Narebski)
 * fixed Makefile
 * whizzy-edition: documentation and examples.


SINCE LAST RELEASE:
===================

Emacs-mode:

 - version 1.1.3
 * overlays are now variables and can now be customized.
 * changed whizzy-edit API.
 * added -display option.

 - Version 1.1.2
 * whizzy-master is ignored when set to the buffer itself.
 * Revert buffer keeps whizzytex alive (cleaning on failure must be FIXED.)
 * Added prefix-arg 16 to start whizzutex in debug mode. 
 * Removed the use of view-mode as a local-variable!!!

 - Version 1.1.1
 * warn and pop-up interaction window when fails during initialization.
 * added debug variable in emacs and menu entry to toggle it
 * move to the first slice in not already in a slice when mode is turn on
 * fixed (partially?) the bug with the cursor moving abruptly to the end of
   buffer, when input was too fast.